Fixed bugs in api specification
